update mobile design

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=48705c97be38b4926e8c",
+    "/css/app.css": "/css/app.css?id=093c7cdd15ad0eea7943"
 }
